# oakGstreamer

./: .gitignore  CMakeLists.txt
src/: depth_basic.cpp  encoded_video.cpp  rgb_video.cpp
